Mobile-first hero section and responsive images

--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -2,6 +2,7 @@
 
 @import "base/_global";
 @import "base/_variable";
+@import "base/_mixins";
 
 @import "modules/_large-hero";
 @import "modules/_btn"
