--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -5,4 +5,6 @@
 @import "base/_mixins";
 
 @import "modules/_large-hero";
-@import "modules/_btn"
+@import "modules/_btn";
+@import "modules/_wrapper";
+@import "modules/_page-section";
