Completed "Our Beginning" section

--- a/app/assets/styles/base/_mixins.css
+++ b/app/assets/styles/base/_mixins.css
@@ -15,3 +15,11 @@
         @mixin-content;
     }
 }
+
+@define-mixin clear-fix {
+    &::after {
+        content: "";
+        clear: both;
+        display: table;
+    }
+}
