--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -5,13 +5,25 @@
         margin-bottom: 1rem;
     }
 
+    &--gutters {
+        margin-right: -65px;
+    }
+
+    &--gutters > div {
+        padding-right: 65px;
+    }
+
+    &--gutters-large {
+        margin-right: -100px;
+    }
+
+    &--gutters-large > div {
+        padding-right: 100px;
+    }
+
     @mixin atMedium {
         &__b-margin-until-medium {
             margin-bottom: 0;
-        }
-
-        &__medium-4--gutters {
-            padding-right: 65px;
         }
 
         &__medium-4 {
@@ -21,6 +33,11 @@
 
         &__medium-4--larger {
             width: 37%;
+        }
+
+        &__medium-6 {
+            float: left;
+            width: 50%;
         }
     
         &__medium-8 {
