--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -15,4 +15,6 @@
 @import "modules/_feature-item";
 @import "modules/_testimonial";
 @import "modules/_sprite";
-@import "modules/_site-footer"
+@import "modules/_site-footer";
+@import "modules/_site-header";
+@import "modules/_primary-nav";
